chore: adopt mcp-openapi-proxy as default mcp
